--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,28 +15,55 @@
 body {
   background-color: #c4def7;
   font-family: vazirmatn;
+  direction: rtl;
+}
+
+input {
+  font-family: vazirmatn;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .container {
   max-width: 1124px;
   height: 100vh;
   margin: 0 auto;
-  background-color: black;
 }
 
-header {
+.app-navbar {
   width: 100%;
   height: 50px;
-  background-color: orange;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.app-navbar a {
+  padding: 0 5px;
+  font-size: 2rem;
+  color: white;
+  display: flex;
+}
+
+.app-navbar span {
+  font-size: 2rem;
 }
 
 main {
   width: 100%;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 100px);
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 1fr;
-  grid-template-areas: "Time-and-Weather Search-and-Bookmarks Todo";
+  grid-template-areas: "Todo Search-and-Bookmarks Time-and-Weather";
   gap: 16px;
 }
 
@@ -50,7 +77,103 @@ main {
   background-color: green;
 }
 
-.todo {
+.to-do {
   grid-area: Todo;
-  background-color: fuchsia;
+  background-color: white;
+  border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.to-do-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.to-do-header h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.to-do-header span {
+  font-size: 1rem;
+  padding: 10px;
+  background-color: rgba(128, 128, 128, 0.3);
+  border-radius: 8px;
+}
+
+.to-do-list-wrapper {
+  height: 100%;
+  padding: 10px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.to-do-item {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+  padding: 4px;
+  margin-bottom: 10px;
+  border-radius: 12px;
+  font-size: 1rem;
+}
+
+.to-do-item input {
+  cursor: pointer;
+}
+
+.to-do-delete-icon {
+  position: absolute;
+  left: 4px;
+  color: rgba(128, 128, 128, 0.6);
+  cursor: pointer;
+}
+
+.to-do-title {
+  max-width: 50%;
+  display: inline-block;
+  overflow-x: hidden;
+  text-wrap: nowrap;
+  font-size: 1rem;
+}
+
+.to-do-footer {
+  width: 100%;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.to-do-input-form {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.to-do-input {
+  padding: 5px;
+  width: 95%;
+  border-radius: 8px;
+  outline: 0;
+  border: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.to-do-input-form span {
+  position: absolute;
+  left: 4%;
+  top: 10%;
+  padding: 0 3px;
+  color: rgba(128, 128, 128, 0.6);
+  background-color: white;
+  cursor: pointer;
+}
+
+.to-do-input-form span::placeholder {
+  color: rgba(128, 128, 128, 0.3);
 }
