--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -4,6 +4,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-Thin.ttf) format("truetype");
   font-weight: 100;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-ExtraLight.ttf) format("truetype");
   font-weight: 200;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -20,6 +22,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-Light.ttf) format("truetype");
   font-weight: 300;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -28,6 +31,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-Regular.ttf) format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -36,6 +40,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-Medium.ttf) format("truetype");
   font-weight: 500;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -44,6 +49,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-SemiBold.ttf) format("truetype");
   font-weight: 600;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -52,6 +58,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-Bold.ttf) format("truetype");
   font-weight: 700;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -60,6 +67,7 @@
     url(./../fonts/ttf/Vazirmatn-FD-ExtraBold.ttf) format("truetype");
   font-weight: 800;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -68,4 +76,5 @@
     url(./../fonts/ttf/Vazirmatn-FD-Black.ttf) format("truetype");
   font-weight: 900;
   font-style: normal;
+  font-display: block;
 }
